Big Port: UnicodeUtil, byte to sbyte
Java's byte is signed, so changed ported code to use sbyte instead.

--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -909,6 +909,7 @@
     <Compile Include="Util\StringHelper.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Util\ThreadInterruptedException.cs" />
     <Compile Include="Util\ToStringUtils.cs">
       <SubType>Code</SubType>
     </Compile>
