--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -835,11 +835,15 @@
     <Compile Include="Util\Automaton\Automaton.cs" />
     <Compile Include="Util\Automaton\BasicAutomata.cs" />
     <Compile Include="Util\Automaton\BasicOperations.cs" />
+    <Compile Include="Util\Automaton\ByteRunAutomaton.cs" />
+    <Compile Include="Util\Automaton\CharacterRunAutomaton.cs" />
     <Compile Include="Util\Automaton\IAutomatonProvider.cs" />
+    <Compile Include="Util\Automaton\RunAutomaton.cs" />
     <Compile Include="Util\Automaton\SortedIntSet.cs" />
     <Compile Include="Util\Automaton\State.cs" />
     <Compile Include="Util\Automaton\StatePair.cs" />
     <Compile Include="Util\Automaton\Transition.cs" />
+    <Compile Include="Util\Automaton\UTF32ToUTF8.cs" />
     <Compile Include="Util\NamedThreadFactory.cs" />
     <Compile Include="Util\PagedBytes.cs" />
     <Compile Include="Util\PrintStreamInfoStream.cs" />
