--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -837,6 +837,7 @@
     <Compile Include="Util\Automaton\BasicOperations.cs" />
     <Compile Include="Util\Automaton\ByteRunAutomaton.cs" />
     <Compile Include="Util\Automaton\CharacterRunAutomaton.cs" />
+    <Compile Include="Util\Automaton\CompiledAutomaton.cs" />
     <Compile Include="Util\Automaton\IAutomatonProvider.cs" />
     <Compile Include="Util\Automaton\RunAutomaton.cs" />
     <Compile Include="Util\Automaton\SortedIntSet.cs" />
