--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Document\SetBasedFieldSelector.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Index\AtomicReader.cs" />
     <Compile Include="Index\BufferedDeletes.cs" />
     <Compile Include="Index\ByteBlockPool.cs" />
     <Compile Include="Index\ByteSliceReader.cs" />
@@ -830,29 +831,10 @@
     <Compile Include="Support\IChecksum.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Support\StringTokenizer.cs" />
     <Compile Include="Support\ThreadFactory.cs" />
-    <Compile Include="Util\Automaton\Automaton.cs" />
-    <Compile Include="Util\Automaton\BasicAutomata.cs" />
-    <Compile Include="Util\Automaton\BasicOperations.cs" />
-    <Compile Include="Util\Automaton\ByteRunAutomaton.cs" />
-    <Compile Include="Util\Automaton\CharacterRunAutomaton.cs" />
-    <Compile Include="Util\Automaton\CompiledAutomaton.cs" />
-    <Compile Include="Util\Automaton\DaciukMihovAutomatonBuilder.cs" />
-    <Compile Include="Util\Automaton\IAutomatonProvider.cs" />
-    <Compile Include="Util\Automaton\Lev1ParametricDescription.cs" />
-    <Compile Include="Util\Automaton\Lev1TParametricDescription.cs" />
-    <Compile Include="Util\Automaton\Lev2ParametricDescription.cs" />
-    <Compile Include="Util\Automaton\Lev2TParametricDescription.cs" />
-    <Compile Include="Util\Automaton\LevenshteinAutomata.cs" />
-    <Compile Include="Util\Automaton\MinimizationOperations.cs" />
-    <Compile Include="Util\Automaton\RunAutomaton.cs" />
-    <Compile Include="Util\Automaton\SortedIntSet.cs" />
-    <Compile Include="Util\Automaton\State.cs" />
-    <Compile Include="Util\Automaton\StatePair.cs" />
-    <Compile Include="Util\Automaton\Transition.cs" />
-    <Compile Include="Util\Automaton\UTF32ToUTF8.cs" />
     <Compile Include="Util\NamedThreadFactory.cs" />
+    <Compile Include="Util\Packed\GrowableWriter.cs" />
+    <Compile Include="Util\Packed\PackedInts.cs" />
     <Compile Include="Util\PagedBytes.cs" />
     <Compile Include="Util\PrintStreamInfoStream.cs" />
     <Compile Include="Util\RecyclingByteBlockAllocator.cs" />
@@ -877,23 +859,6 @@
     <Compile Include="Util\DoubleBarrelLRUCache.cs" />
     <Compile Include="Util\FilterIterator.cs" />
     <Compile Include="Util\FixedBitSet.cs" />
-    <Compile Include="Util\Fst\Builder.cs" />
-    <Compile Include="Util\Fst\ByteSequenceOutputs.cs" />
-    <Compile Include="Util\Fst\BytesRefFSTEnum.cs" />
-    <Compile Include="Util\Fst\BytesStore.cs" />
-    <Compile Include="Util\Fst\CharSequenceOutputs.cs" />
-    <Compile Include="Util\Fst\ForwardBytesReader.cs" />
-    <Compile Include="Util\Fst\FST.cs" />
-    <Compile Include="Util\Fst\FSTEnum.cs" />
-    <Compile Include="Util\Fst\IntSequenceOutputs.cs" />
-    <Compile Include="Util\Fst\IntsRefFSTEnum.cs" />
-    <Compile Include="Util\Fst\NodeHash.cs" />
-    <Compile Include="Util\Fst\NoOutputs.cs" />
-    <Compile Include="Util\Fst\Outputs.cs" />
-    <Compile Include="Util\Fst\PairOutputs.cs" />
-    <Compile Include="Util\Fst\PositiveIntOutputs.cs" />
-    <Compile Include="Util\Fst\ReverseBytesReader.cs" />
-    <Compile Include="Util\Fst\Util.cs" />
     <Compile Include="Util\IBits.cs" />
     <Compile Include="Util\BytesRef.cs" />
     <Compile Include="Util\CharsRef.cs" />
@@ -942,18 +907,16 @@
     <Compile Include="Util\SmallFloat.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Util\SortedVIntList.cs" />
     <Compile Include="Util\SorterTemplate.cs" />
     <Compile Include="Util\StringHelper.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Util\ThreadInterruptedException.cs" />
     <Compile Include="Util\ToStringUtils.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Util\UnicodeUtil.cs" />
     <Compile Include="Util\Version.cs" />
-    <Compile Include="Util\VirtualMethod.cs" />
-    <Compile Include="Util\WeakIdentityMap.cs" />
     <None Include="Lucene.Net.Search.RemoteSearchable.config" />
     <None Include="Lucene.Net.Search.TestSort.config" />
     <None Include="Lucene.Net.snk" />
