--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -846,8 +846,10 @@
     <Compile Include="Util\Automaton\Lev2TParametricDescription.cs" />
     <Compile Include="Util\Automaton\LevenshteinAutomata.cs" />
     <Compile Include="Util\Automaton\MinimizationOperations.cs" />
+    <Compile Include="Util\Automaton\RegExp.cs" />
     <Compile Include="Util\Automaton\RunAutomaton.cs" />
     <Compile Include="Util\Automaton\SortedIntSet.cs" />
+    <Compile Include="Util\Automaton\SpecialOperations.cs" />
     <Compile Include="Util\Automaton\State.cs" />
     <Compile Include="Util\Automaton\StatePair.cs" />
     <Compile Include="Util\Automaton\Transition.cs" />
