--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -217,6 +217,7 @@
     <Compile Include="Document\SetBasedFieldSelector.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Index\AtomicReader.cs" />
     <Compile Include="Index\BufferedDeletes.cs" />
     <Compile Include="Index\ByteBlockPool.cs" />
     <Compile Include="Index\ByteSliceReader.cs" />
@@ -260,6 +261,7 @@
     <Compile Include="Index\FieldReaderException.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Index\Fields.cs" />
     <Compile Include="Index\FieldSortedTermVectorMapper.cs" />
     <Compile Include="Index\FieldsReader.cs">
       <SubType>Code</SubType>
@@ -850,13 +852,17 @@
     <Compile Include="Util\Automaton\Lev2TParametricDescription.cs" />
     <Compile Include="Util\Automaton\LevenshteinAutomata.cs" />
     <Compile Include="Util\Automaton\MinimizationOperations.cs" />
+    <Compile Include="Util\Automaton\RegExp.cs" />
     <Compile Include="Util\Automaton\RunAutomaton.cs" />
     <Compile Include="Util\Automaton\SortedIntSet.cs" />
+    <Compile Include="Util\Automaton\SpecialOperations.cs" />
     <Compile Include="Util\Automaton\State.cs" />
     <Compile Include="Util\Automaton\StatePair.cs" />
     <Compile Include="Util\Automaton\Transition.cs" />
     <Compile Include="Util\Automaton\UTF32ToUTF8.cs" />
     <Compile Include="Util\NamedThreadFactory.cs" />
+    <Compile Include="Util\Packed\GrowableWriter.cs" />
+    <Compile Include="Util\Packed\PackedInts.cs" />
     <Compile Include="Util\PagedBytes.cs" />
     <Compile Include="Util\PrintStreamInfoStream.cs" />
     <Compile Include="Util\RecyclingByteBlockAllocator.cs" />
@@ -938,9 +944,6 @@
     <Compile Include="Util\PriorityQueue.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Util\Cache\Cache.cs" />
-    <Compile Include="Util\Cache\SimpleLRUCache.cs" />
-    <Compile Include="Util\Cache\SimpleMapCache.cs" />
     <Compile Include="Util\RamUsageEstimator.cs" />
     <Compile Include="Util\ReaderUtil.cs" />
     <Compile Include="Util\SmallFloat.cs">
