--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -180,45 +180,33 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Document\AbstractField.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="Document\BinaryDocValuesField.cs" />
     <Compile Include="Document\CompressionTools.cs" />
-    <Compile Include="Document\DateField.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Document\DateTools.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Document\Document.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Document\DocumentStoredFieldVisitor.cs" />
+    <Compile Include="Document\DoubleDocValuesField.cs" />
+    <Compile Include="Document\DoubleField.cs" />
     <Compile Include="Document\Field.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Document\Fieldable.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Document\FieldSelector.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Document\FieldSelectorResult.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Document\LoadFirstFieldSelector.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Document\MapFieldSelector.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Document\NumberTools.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Document\NumericField.cs" />
-    <Compile Include="Document\SetBasedFieldSelector.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="Document\FieldType.cs" />
+    <Compile Include="Document\FloatDocValuesField.cs" />
+    <Compile Include="Document\FloatField.cs" />
+    <Compile Include="Document\IntField.cs" />
+    <Compile Include="Document\LongField.cs" />
+    <Compile Include="Document\NumericDocValuesField.cs" />
+    <Compile Include="Document\SortedDocValuesField.cs" />
+    <Compile Include="Document\SortedSetDocValuesField.cs" />
+    <Compile Include="Document\StoredField.cs" />
+    <Compile Include="Document\StringField.cs" />
+    <Compile Include="Document\TextField.cs" />
     <Compile Include="Index\AtomicReader.cs" />
+    <Compile Include="Index\AtomicReaderContext.cs" />
     <Compile Include="Index\BufferedDeletes.cs" />
     <Compile Include="Index\ByteBlockPool.cs" />
     <Compile Include="Index\ByteSliceReader.cs" />
@@ -299,6 +287,7 @@
     <Compile Include="Index\IndexReader.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Index\IndexReaderContext.cs" />
     <Compile Include="Index\IndexWriter.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -332,6 +321,7 @@
     </Compile>
     <Compile Include="Index\Payload.cs" />
     <Compile Include="Index\PositionBasedTermVectorMapper.cs" />
+    <Compile Include="Index\ReaderManager.cs" />
     <Compile Include="Index\ReadOnlyDirectoryReader.cs" />
     <Compile Include="Index\ReadOnlySegmentReader.cs" />
     <Compile Include="Index\ReusableStringReader.cs" />
@@ -402,6 +392,7 @@
     <Compile Include="Index\TermPositionVector.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Index\Terms.cs" />
     <Compile Include="Index\TermsHash.cs" />
     <Compile Include="Index\TermsHashConsumer.cs" />
     <Compile Include="Index\TermsHashConsumerPerField.cs" />
