--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -322,6 +322,7 @@
     <Compile Include="Index\Payload.cs" />
     <Compile Include="Index\PositionBasedTermVectorMapper.cs" />
     <Compile Include="Index\ReaderManager.cs" />
+    <Compile Include="Index\ReadersAndLiveDocs.cs" />
     <Compile Include="Index\ReadOnlyDirectoryReader.cs" />
     <Compile Include="Index\ReadOnlySegmentReader.cs" />
     <Compile Include="Index\ReusableStringReader.cs" />
