proj file missed.

--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -200,12 +200,18 @@
     <Compile Include="Document\FieldType.cs" />
     <Compile Include="Document\FloatDocValuesField.cs" />
     <Compile Include="Document\FloatField.cs" />
+    <Compile Include="Document\IntDocValuesField.cs" />
     <Compile Include="Document\IntField.cs" />
+    <Compile Include="Document\LongDocValuesField.cs" />
     <Compile Include="Document\LongField.cs" />
     <Compile Include="Document\NumericDocValuesField.cs" />
+    <Compile Include="Document\PackedLongDocValuesField.cs" />
+    <Compile Include="Document\ShortDocValuesField.cs" />
+    <Compile Include="Document\SortedBytesDocValuesField.cs" />
     <Compile Include="Document\SortedDocValuesField.cs" />
     <Compile Include="Document\SortedSetDocValuesField.cs" />
     <Compile Include="Document\StoredField.cs" />
+    <Compile Include="Document\StraightBytesDocValuesField.cs" />
     <Compile Include="Document\StringField.cs" />
     <Compile Include="Document\TextField.cs" />
     <Compile Include="Index\AtomicReader.cs" />
