Initial work on porting BulkOperations

--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -825,6 +825,33 @@
     <Compile Include="Util\Automaton\Transition.cs" />
     <Compile Include="Util\Automaton\UTF32ToUTF8.cs" />
     <Compile Include="Util\NamedThreadFactory.cs" />
+    <Compile Include="Util\Packed\BulkOperation.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked1.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked10.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked11.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked12.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked13.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked14.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked15.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked16.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked17.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked18.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked19.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked2.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked20.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked21.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked22.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked23.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked24.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked3.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked4.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked5.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked6.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked7.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked8.cs" />
+    <Compile Include="Util\Packed\BulkOperationPacked9.cs" />
+    <Compile Include="Util\Packed\BulkOperationPackedSingleBlock.cs" />
     <Compile Include="Util\Packed\GrowableWriter.cs" />
     <Compile Include="Util\Packed\Packed64SingleBlock.cs" />
     <Compile Include="Util\Packed\PackedInts.cs" />
