--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -223,39 +223,22 @@
     <Compile Include="Index\BufferedDeletes.cs" />
     <Compile Include="Index\ByteSliceReader.cs" />
     <Compile Include="Index\ByteSliceWriter.cs" />
-    <Compile Include="Index\CharBlockPool.cs" />
     <Compile Include="Index\CheckIndex.cs" />
     <Compile Include="Index\CompositeReader.cs" />
     <Compile Include="Index\CompositeReaderContext.cs" />
-    <Compile Include="Index\CompoundFileReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\CompoundFileWriter.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Index\ConcurrentMergeScheduler.cs" />
     <Compile Include="Index\CorruptIndexException.cs" />
-    <Compile Include="Index\DefaultSkipListReader.cs" />
-    <Compile Include="Index\DefaultSkipListWriter.cs" />
     <Compile Include="Index\DirectoryReader.cs" />
     <Compile Include="Index\DocConsumer.cs" />
-    <Compile Include="Index\DocConsumerPerThread.cs" />
     <Compile Include="Index\DocFieldConsumer.cs" />
     <Compile Include="Index\DocFieldConsumerPerField.cs" />
-    <Compile Include="Index\DocFieldConsumerPerThread.cs" />
-    <Compile Include="Index\DocFieldConsumers.cs" />
-    <Compile Include="Index\DocFieldConsumersPerField.cs" />
-    <Compile Include="Index\DocFieldConsumersPerThread.cs" />
     <Compile Include="Index\DocFieldProcessor.cs" />
     <Compile Include="Index\DocFieldProcessorPerField.cs" />
-    <Compile Include="Index\DocFieldProcessorPerThread.cs" />
     <Compile Include="Index\DocInverter.cs" />
     <Compile Include="Index\DocInverterPerField.cs" />
-    <Compile Include="Index\DocInverterPerThread.cs" />
     <Compile Include="Index\DocsAndPositionsEnum.cs" />
     <Compile Include="Index\DocsEnum.cs" />
     <Compile Include="Index\DocumentsWriter.cs" />
-    <Compile Include="Index\DocumentsWriterThreadState.cs" />
     <Compile Include="Index\FieldInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -263,41 +246,15 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Index\FieldInvertState.cs" />
-    <Compile Include="Index\FieldReaderException.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Index\Fields.cs" />
-    <Compile Include="Index\FieldSortedTermVectorMapper.cs" />
-    <Compile Include="Index\FieldsReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\FieldsWriter.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Index\FilteredTermsEnum.cs" />
-    <Compile Include="Index\FilterIndexReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\FormatPostingsDocsConsumer.cs" />
-    <Compile Include="Index\FormatPostingsDocsWriter.cs" />
-    <Compile Include="Index\FormatPostingsFieldsConsumer.cs" />
-    <Compile Include="Index\FormatPostingsFieldsWriter.cs" />
-    <Compile Include="Index\FormatPostingsPositionsConsumer.cs" />
-    <Compile Include="Index\FormatPostingsPositionsWriter.cs" />
-    <Compile Include="Index\FormatPostingsTermsConsumer.cs" />
-    <Compile Include="Index\FormatPostingsTermsWriter.cs" />
-    <Compile Include="Index\FreqProxFieldMergeState.cs" />
     <Compile Include="Index\FreqProxTermsWriter.cs" />
     <Compile Include="Index\FreqProxTermsWriterPerField.cs" />
-    <Compile Include="Index\FreqProxTermsWriterPerThread.cs" />
     <Compile Include="Index\IIndexableField.cs" />
     <Compile Include="Index\IIndexableFieldType.cs" />
     <Compile Include="Index\IndexCommit.cs" />
     <Compile Include="Index\IndexDeletionPolicy.cs" />
     <Compile Include="Index\IndexFileDeleter.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\IndexFileNameFilter.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Index\IndexFileNames.cs">
@@ -310,13 +267,10 @@
     <Compile Include="Index\IndexWriter.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Index\IntBlockPool.cs" />
     <Compile Include="Index\InvertedDocConsumer.cs" />
     <Compile Include="Index\InvertedDocConsumerPerField.cs" />
-    <Compile Include="Index\InvertedDocConsumerPerThread.cs" />
     <Compile Include="Index\InvertedDocEndConsumer.cs" />
     <Compile Include="Index\InvertedDocEndConsumerPerField.cs" />
-    <Compile Include="Index\InvertedDocEndConsumerPerThread.cs" />
     <Compile Include="Index\KeepOnlyLastCommitDeletionPolicy.cs" />
     <Compile Include="Index\LogByteSizeMergePolicy.cs" />
     <Compile Include="Index\LogDocMergePolicy.cs" />
@@ -324,22 +278,9 @@
     <Compile Include="Index\MergeDocIDRemapper.cs" />
     <Compile Include="Index\MergePolicy.cs" />
     <Compile Include="Index\MergeScheduler.cs" />
-    <Compile Include="Index\MultiLevelSkipListReader.cs" />
-    <Compile Include="Index\MultiLevelSkipListWriter.cs" />
-    <Compile Include="Index\MultipleTermPositions.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Index\MultiReader.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Index\NormsWriter.cs" />
-    <Compile Include="Index\NormsWriterPerField.cs" />
-    <Compile Include="Index\NormsWriterPerThread.cs" />
-    <Compile Include="Index\ParallelReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\Payload.cs" />
-    <Compile Include="Index\PositionBasedTermVectorMapper.cs" />
     <Compile Include="Index\ReaderManager.cs" />
     <Compile Include="Index\ReadersAndLiveDocs.cs" />
     <Compile Include="Index\SegmentInfo.cs">
@@ -348,63 +289,17 @@
     <Compile Include="Index\SegmentInfos.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Index\SegmentMergeInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\SegmentMergeQueue.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Index\SegmentMerger.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Index\SegmentReader.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Index\SegmentTermEnum.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\SegmentTermPositions.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\SegmentTermPositionVector.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\SegmentTermVector.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Index\SegmentWriteState.cs" />
     <Compile Include="Index\SerialMergeScheduler.cs" />
     <Compile Include="Index\SnapshotDeletionPolicy.cs" />
-    <Compile Include="Index\SortedTermVectorMapper.cs" />
-    <Compile Include="Index\StaleReaderException.cs" />
-    <Compile Include="Index\StoredFieldsWriter.cs" />
-    <Compile Include="Index\StoredFieldsWriterPerThread.cs" />
     <Compile Include="Index\StoredFieldVisitor.cs" />
     <Compile Include="Index\Term.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TermBuffer.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TermDocs.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TermFreqVector.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TermInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TermInfosReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TermInfosWriter.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TermPositions.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TermPositionVector.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Index\Terms.cs" />
@@ -412,29 +307,12 @@
     <Compile Include="Index\TermsHash.cs" />
     <Compile Include="Index\TermsHashConsumer.cs" />
     <Compile Include="Index\TermsHashConsumerPerField.cs" />
-    <Compile Include="Index\TermsHashConsumerPerThread.cs" />
     <Compile Include="Index\TermsHashPerField.cs" />
-    <Compile Include="Index\TermsHashPerThread.cs" />
     <Compile Include="Index\TermState.cs" />
-    <Compile Include="Index\TermVectorEntry.cs" />
-    <Compile Include="Index\TermVectorEntryFreqSortedComparator.cs" />
-    <Compile Include="Index\TermVectorMapper.cs" />
-    <Compile Include="Index\TermVectorOffsetInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TermVectorsReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TermVectorsTermsWriter.cs" />
-    <Compile Include="Index\TermVectorsTermsWriterPerField.cs" />
-    <Compile Include="Index\TermVectorsTermsWriterPerThread.cs" />
-    <Compile Include="Index\TermVectorsWriter.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="LucenePackage.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Search\AutomationQuery.cs" />
+    <Compile Include="Search\AutomatonQuery.cs" />
     <Compile Include="Search\BitsFilteredDocIdSet.cs" />
     <Compile Include="Search\BooleanClause.cs">
       <SubType>Code</SubType>
@@ -462,9 +340,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Search\ConstantScoreQuery.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\DefaultSimilarity.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Search\DisjunctionMaxQuery.cs">
@@ -497,9 +372,6 @@
     <Compile Include="Search\FieldDoc.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Search\FieldDocSortedHitQueue.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Search\FieldValueHitQueue.cs" />
     <Compile Include="Search\Filter.cs">
       <SubType>Code</SubType>
@@ -509,10 +381,6 @@
     <Compile Include="Search\FilteredQuery.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Search\FilteredTermEnum.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\FilterManager.cs" />
     <Compile Include="Search\FuzzyQuery.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -532,18 +400,12 @@
     <Compile Include="Search\MultiPhraseQuery.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Search\MultiSearcher.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Search\MultiTermQuery.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Search\MultiTermQueryWrapperFilter.cs" />
     <Compile Include="Search\NumericRangeFilter.cs" />
     <Compile Include="Search\NumericRangeQuery.cs" />
-    <Compile Include="Search\ParallelMultiSearcher.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Search\Payloads\AveragePayloadFunction.cs" />
     <Compile Include="Search\Payloads\MaxPayloadFunction.cs" />
     <Compile Include="Search\Payloads\MinPayloadFunction.cs" />
@@ -574,9 +436,6 @@
     <Compile Include="Search\Query.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Search\QueryTermVector.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Search\QueryWrapperFilter.cs" />
     <Compile Include="Search\ReferenceManager.cs" />
     <Compile Include="Search\ReqExclScorer.cs">
@@ -592,19 +451,6 @@
     <Compile Include="Search\Scorer.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Search\Searchable.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\Searcher.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\Similarity.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\SimilarityDelegator.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\SingleTermEnum.cs" />
     <Compile Include="Search\SloppyPhraseScorer.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -614,9 +460,6 @@
     <Compile Include="Search\SortField.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Search\SpanFilter.cs" />
-    <Compile Include="Search\SpanFilterResult.cs" />
-    <Compile Include="Search\SpanQueryFilter.cs" />
     <Compile Include="Search\Spans\FieldMaskingSpanQuery.cs" />
     <Compile Include="Search\Spans\NearSpansOrdered.cs">
       <SubType>Code</SubType>
@@ -675,9 +518,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Search\WildcardQuery.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\WildcardTermEnum.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Store\AlreadyClosedException.cs">
