--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -529,6 +529,8 @@
     <Compile Include="Store\BufferedIndexOutput.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Store\ByteArrayDataInput.cs" />
+    <Compile Include="Store\ByteArrayDataOutput.cs" />
     <Compile Include="Store\CheckSumIndexInput.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -543,6 +545,7 @@
     <Compile Include="Store\FileSwitchDirectory.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Store\FlushInfo.cs" />
     <Compile Include="Store\FSDirectory.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -555,6 +558,7 @@
     <Compile Include="Store\IndexOutput.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Store\IOContext.cs" />
     <Compile Include="Store\Lock.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -573,6 +577,7 @@
     <Compile Include="Store\LockVerifyServer.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Store\MergeInfo.cs" />
     <Compile Include="Store\MMapDirectory.cs">
       <SubType>Code</SubType>
     </Compile>
