--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -647,6 +647,7 @@
     <Compile Include="Support\Deflater.cs" />
     <Compile Include="Support\Double.cs" />
     <Compile Include="Support\EquatableList.cs" />
+    <Compile Include="Support\FileStreamExtensions.cs" />
     <Compile Include="Support\FileSupport.cs" />
     <Compile Include="Support\GeneralKeyedCollection.cs" />
     <Compile Include="Support\HashMap.cs" />
