Port: Add OutputStreamDataOutput, RAM types

--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -598,6 +598,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Store\NRTCachingDirectory.cs" />
+    <Compile Include="Store\OutputStreamDataOutput.cs" />
     <Compile Include="Store\RAMDirectory.cs">
       <SubType>Code</SubType>
     </Compile>
